--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,14 @@ authors = ["Josh McKinney"]
 edition = "2021"
 description = "A WebFinger client and library written in Rust."
 license = "MIT OR Apache-2.0"
-version = "0.0.1"
+version = "0.0.2"
 documentation = "https://docs.rs/webfinger-rs"
 repository = "https://github.com/joshka/webfinger-rs"
 keywords = ["webfinger", "client", "library", "rust", "cli"]
+readme = "README.md"
 
 [workspace.dependencies]
-webfinger-cli = { path = "webfinger-cli", version = "0.0.1" }
-webfinger-rs = { path = "webfinger-rs", version = "0.0.1" }
+webfinger-cli = { path = "webfinger-cli", version = "0.0.2" }
+webfinger-rs = { path = "webfinger-rs", version = "0.0.2" }
 
 http = "1.1.0"
