--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -8,6 +8,7 @@ documentation.workspace = true
 repository.workspace = true
 keywords.workspace = true
 authors.workspace = true
+readme.workspace = true
 
 [features]
 reqwest = ["dep:reqwest"]
