--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -16,10 +16,11 @@ reqwest = ["dep:reqwest"]
 [dependencies]
 http.workspace = true
 percent-encoding = "2.3.1"
-url = "2.5.2"
-serde = { version = "1.0.210", features = ["derive"] }
-serde_with = "3.9.0"
-serde_json = "1.0.128"
+nutype = { version = "0.5.0", features = ["serde"] }
 reqwest = { version = "0.12.7", optional = true, features = ["json"] }
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+serde_with = "3.9.0"
 thiserror = "1.0.64"
 tracing = "0.1.40"
+url = "2.5.2"
