--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -12,12 +12,18 @@ readme.workspace = true
 
 [features]
 reqwest = ["dep:reqwest"]
+axum = ["dep:axum"]
 
 [dependencies]
+axum = { version = "0.7", optional = true, default-features = false, features = [
+    "json",
+] }
 http.workspace = true
 percent-encoding = "2.3.1"
 nutype = { version = "0.5.0", features = ["serde"] }
-reqwest = { version = "0.12.7", optional = true, features = ["json"] }
+reqwest = { version = "0.12.7", optional = true, default-features = false, features = [
+    "json",
+] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 serde_with = "3.9.0"
