--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -32,6 +32,7 @@ serde = { version = "1.0.210", features = ["derive"] }
 serde_with = "3.9.0"
 thiserror = "1.0.64"
 tracing.workspace = true
+serde_json = "1.0.128"
 
 [dev-dependencies]
 axum = { workspace = true, default-features = true }
