feat: add actix support
- Added conversions for actixe request and responses
- Added actix example
- Renamed Request and Respontr to WebFingerRequest and WebFingerResponse to make these more obvious
- Configured examples to use self-signed TLS cert (as webfinger requires TLS)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ readme = "README.md"
 webfinger-rs = { path = "webfinger-rs", version = "0.0.10" }
 
 axum = { version = "0.7.7", default-features = false }
+actix-web = { version = "4.9.0" }
 color-eyre = "0.6.3"
 http = "1.1.0"
 tokio = "1.40.0"
