--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -15,12 +15,15 @@ authors.workspace = true
 ## No features are enabled by default.
 default = []
 
+## Provides integration with the Actix web framework.
+actix = ["dep:actix-web"]
 ## Provides integration with the Axum web framework.
 axum = ["dep:axum", "dep:axum-extra"]
 ## Provides integration with the Reqwest HTTP client.
 reqwest = ["dep:reqwest"]
 
 [dependencies]
+actix-web = { workspace = true, optional = true }
 axum = { workspace = true, optional = true, features = ["json"] }
 axum-extra = { version = "0.9.4", optional = true, features = ["query"] }
 document-features = "0.2.10"
@@ -35,6 +38,8 @@ tracing.workspace = true
 serde_json = "1.0.128"
 
 [dev-dependencies]
+actix-web = { workspace = true, features = ["rustls-0_23"] }
+actix-tls = { version = "3.4.0", features = ["rustls-0_23"] }
 axum = { workspace = true, default-features = true }
 color-eyre.workspace = true
 http-body-util = "0.1.2"
@@ -42,6 +47,9 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tower = "0.5.1"
 tower-http = { version = "0.6.1", features = ["trace"] }
+rcgen = "0.13.1"
+rustls = "0.23.15"
+axum-server = { version = "0.7.1", features = ["tls-rustls"] }
 
 [package.metadata.docs.rs]
 all-features = true
@@ -54,3 +62,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 name = "axum"
 required-features = ["axum"]
 doc-scrape-examples = true
+
+[[example]]
+name = "actix"
+required-features = ["actix"]
