--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ axum = { version = "0.7.7", default-features = false }
 actix-web = { version = "4.9.0" }
 color-eyre = "0.6.3"
 http = "1.1.0"
+reqwest = { version = "0.12.8" }
 tokio = "1.40.0"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
