--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -24,18 +24,19 @@ reqwest = ["dep:reqwest"]
 
 [dependencies]
 actix-web = { workspace = true, optional = true }
+async-convert = "1.0.0"
 axum = { workspace = true, optional = true, features = ["json"] }
 axum-extra = { version = "0.9.4", optional = true, features = ["query"] }
 document-features = "0.2.10"
 http.workspace = true
-percent-encoding = "2.3.1"
 nutype = { version = "0.5.0", features = ["serde"] }
-reqwest = { version = "0.12.7", optional = true, features = ["json"] }
+percent-encoding = "2.3.1"
+reqwest = { workspace = true, optional = true, features = ["json"] }
 serde = { version = "1.0.210", features = ["derive"] }
-serde_with = "3.9.0"
-thiserror = "1.0.64"
-tracing.workspace = true
 serde_json = "1.0.128"
+serde_with = "3.9.0"
+tracing.workspace = true
+thiserror = "1.0.64"
 
 [dev-dependencies]
 actix-web = { workspace = true, features = ["rustls-0_23"] }
