chore: cleanup tests and docs

--- a/bacon.toml
+++ b/bacon.toml
@@ -45,11 +45,13 @@ need_stdout = false
 command = [
     "cargo",
     "test",
+    "--workspace",
+    "--all-features",
     "--color",
     "always",
     "--",
     "--color",
-    "always",  # see https://github.com/Canop/bacon/issues/124
+    "always",         # see https://github.com/Canop/bacon/issues/124
 ]
 need_stdout = true
 
