--- a/webfinger-cli/Cargo.toml
+++ b/webfinger-cli/Cargo.toml
@@ -14,7 +14,9 @@ readme.workspace = true
 [dependencies]
 clap = { version = "4.5.37", features = ["derive", "wrap_help"] }
 clap-cargo = "0.15.2"
-clap-verbosity = "2.1.0"
+clap-verbosity-flag = { version = "3.0.2", default-features = false, features = [
+    "tracing",
+] }
 color-eyre.workspace = true
 colored_json = "5.0.0"
 http.workspace = true
@@ -22,7 +24,6 @@ reqwest.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing.workspace = true
 tracing-error.workspace = true
-tracing-log = "0.2.0"
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 webfinger-rs = { workspace = true, features = ["reqwest"] }
 
