--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -11,10 +11,8 @@ keywords.workspace = true
 authors.workspace = true
 
 [features]
-#! ## Features
-#!
 ## No features are enabled by default.
-default = []
+default = ["document-features"]
 
 ## Provides integration with the Actix web framework.
 actix = ["dep:actix-web"]
@@ -25,19 +23,19 @@ reqwest = ["dep:reqwest"]
 
 [dependencies]
 actix-web = { workspace = true, optional = true }
-async-convert = "1.0.0"
+async-convert = "1.0"
 axum = { workspace = true, optional = true, features = ["json"] }
-axum-extra = { version = "0.10.1", optional = true, features = ["query"] }
-document-features = "0.2.11"
+axum-extra = { version = "0.10", optional = true, features = ["query"] }
+document-features = { version = "0.2", optional = true }
 http.workspace = true
-nutype = { version = "0.6.1", features = ["serde"] }
-percent-encoding = "2.3.1"
+nutype = { version = "0.6", features = ["serde"] }
+percent-encoding = "2.3"
 reqwest = { workspace = true, optional = true, features = ["json"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-serde_with = "3.12.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_with = "3.12"
 tracing.workspace = true
-thiserror = "2.0.12"
+thiserror = "2"
 
 [dev-dependencies]
 actix-web = { workspace = true, features = ["rustls-0_23"] }
