--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -31,14 +31,14 @@ http.workspace = true
 nutype = { version = "0.6", features = ["serde"] }
 percent-encoding = "2.3"
 reqwest = { workspace = true, optional = true, features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "1.0.184", features = ["derive"] }
+serde_json = "1.0.45"
 serde_with = "3.12"
 tracing.workspace = true
 thiserror = "2"
 
 [dev-dependencies]
-actix-web = { workspace = true, features = ["rustls-0_23"] }
+actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
 actix-tls = { version = "3.4.0", features = ["rustls-0_23"] }
 axum = { workspace = true, default-features = true }
 color-eyre.workspace = true
