--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,33 @@ keywords = ["webfinger", "client", "library", "rust", "cli"]
 readme = "README.md"
 
 [workspace.dependencies]
-axum = { version = "0.8.4", default-features = false }
-actix-web = { version = "4" }
+actix-tls = { version = "3.4", features = ["rustls-0_23"] }
+actix-web = { version = "4.11", features = ["rustls-0_23"] }
+async-convert = "1.0"
+axum = { version = "0.8", default-features = false }
+axum-extra = { version = "0.10" }
+axum-server = { version = "0.7" }
+clap = "4.5"
+clap-cargo = "0.15"
+clap-verbosity-flag = { version = "3.0.1", default-features = false }
 color-eyre = "0.6"
-http = "1"
-reqwest = { version = "0.12" }
-tokio = "1.13.1"
-tracing = "0.1.37"
+colored_json = "5.0"
+document-features = "0.2"
+http = "1.3"
+http-body-util = "0.1"
+nutype = { version = "0.6", features = ["serde"] }
+percent-encoding = "2.3"
+rcgen = "0.13"
+reqwest = "0.12"
+rustls = "0.23"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_with = "3.0"
+thiserror = "2.0"
+tokio = "1"
+tower = "0.5"
+tower-http = { version = "0.6" }
+tracing = "0.1"
 tracing-error = "0.2"
 tracing-subscriber = "0.3"
 webfinger-rs = { path = "webfinger-rs", version = "0.0.16" }
