--- a/webfinger-rs/Cargo.toml
+++ b/webfinger-rs/Cargo.toml
@@ -12,8 +12,7 @@ authors.workspace = true
 
 [features]
 ## No features are enabled by default.
-default = ["document-features"]
-
+default = []
 ## Provides integration with the Actix web framework.
 actix = ["dep:actix-web"]
 ## Provides integration with the Axum web framework.
@@ -23,33 +22,33 @@ reqwest = ["dep:reqwest"]
 
 [dependencies]
 actix-web = { workspace = true, optional = true }
-async-convert = "1.0"
+async-convert.workspace = true
 axum = { workspace = true, optional = true, features = ["json"] }
-axum-extra = { version = "0.10", optional = true, features = ["query"] }
-document-features = { version = "0.2", optional = true }
+axum-extra = { workspace = true, optional = true, features = ["query"] }
+document-features = { workspace = true, optional = true }
 http.workspace = true
-nutype = { version = "0.6", features = ["serde"] }
-percent-encoding = "2.3"
+nutype = { workspace = true, features = ["serde"] }
+percent-encoding.workspace = true
 reqwest = { workspace = true, optional = true, features = ["json"] }
-serde = { version = "1.0.184", features = ["derive"] }
-serde_json = "1.0.45"
-serde_with = "3.12"
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
+serde_with.workspace = true
+thiserror.workspace = true
 tracing.workspace = true
-thiserror = "2"
 
 [dev-dependencies]
-actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
-actix-tls = { version = "3.4.0", features = ["rustls-0_23"] }
+actix-tls.workspace = true
+actix-web.workspace = true
 axum = { workspace = true, default-features = true }
+axum-server = { workspace = true, features = ["tls-rustls"] }
 color-eyre.workspace = true
-http-body-util = "0.1.3"
+http-body-util.workspace = true
+rcgen.workspace = true
+rustls.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tower.workspace = true
+tower-http = { workspace = true, features = ["trace"] }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
-tower = "0.5.2"
-tower-http = { version = "0.6.2", features = ["trace"] }
-rcgen = "0.13.2"
-rustls = "0.23.26"
-axum-server = { version = "0.7.2", features = ["tls-rustls"] }
 
 [package.metadata.docs.rs]
 all-features = true
